haasoscope: Introduce a low-speed wishbone bus
Create a new wishbone bus running at half the speed of the main
wishbone bus.  Move the spi and i2c modules to that bus.  This is in
preparation for support of some fpga features that can not run at
125Mhz.

Signed-off-by: Kevin O'Connor <kevin@koconnor.net>

--- a/fpga_src/qbuild/haasoscope.qsf
+++ b/fpga_src/qbuild/haasoscope.qsf
@@ -47,6 +47,8 @@ set_global_assignment -name VERILOG_FILE ../cmdhandle/streamselect.v
 set_global_assignment -name VERILOG_FILE ../cmdhandle/msgencode.v
 set_global_assignment -name VERILOG_FILE ../cmdhandle/serialcmd.v
 set_global_assignment -name VERILOG_FILE ../busdispatch.v
+set_global_assignment -name VERILOG_FILE ../wb/wb_async_reg.v
+set_global_assignment -name VERILOG_FILE ../buslsdispatch.v
 
 set_location_assignment PIN_27 -to pin_ext_osc
 set_global_assignment -name QIP_FILE ../main_pll/main_pll.qip
